--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-
+    <head>
     <title>React App</title>
-  </head>
-  <body>
-
-    <div id="root"></div>
+    </head>
+    <body className="Body">
+    <div id="root">
+      <div className="Main-page">
+      </div>
+      </div>
   </body>
+
 </html>
