--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <title>React App</title>
+    <title>This day in history</title>
     </head>
     <body className="Body">
     <div id="root">
